# kepler

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  HACKING  NEWS  README  RELEASE  TRANSLATORS  meson.build  meson_options.txt  testing  valgrind.supp
.tx/: config
build-aux/: update-copyright
doc/: BUILDINFO.5.asciidoc  PKGBUILD.5.asciidoc  alpm-hooks.5.asciidoc  asciidoc.conf  footer.asciidoc  index.asciidoc  kepler-conf.8.asciidoc  kepler-key.8.asciidoc  kepler.8.asciidoc  kepler.conf.5.asciidoc  makepkg.8.asciidoc  makepkg.conf.5.asciidoc  meson.build  pacman.8.asciidoc  pacman.conf.5.asciidoc  repo-add.8.asciidoc  submitting-patches.asciidoc  translation-help.asciidoc  vercmp.8.asciidoc
etc/: .gitignore  kepler.conf.in  makepkg.conf.in
lib/libalpm/: add.c  (+54 more)
proto/: PKGBUILD-vcs.proto
scripts/: .gitignore  kepler-db-upgrade.sh.in  kepler-key.sh.in  libmakepkg.pc.in  makepkg-template.pl.in  makepkg.sh.in  meson.build  pkgdiff.sh.in  repo-add.sh.in  wrapper.sh.in
src/kepler/: .gitignore  callback.c  callback.h  check.c  check.h  conf.c  conf.h  database.c  deptest.c  files.c  kepler-conf.c  kepler.c  kepler.h  meson.build  package.c  package.h  query.c  remove.c  sighandler.c  sighandler.h  sync.c  upgrade.c  util.c  util.h
src/kepler/po/: Makevars  POTFILES.in  ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  meson.build  nb.po  nl.po  pacman.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+7 more)
(+610 files in other folders)
